--- a/R/README.Rmd
+++ b/R/README.Rmd
@@ -24,10 +24,8 @@ TBC.
 
 ## Links
 
-<!-- - Presentation slides - [PDF](http://phd3.haziqj.ml/phd-presentation-3-handout.pdf) -->
-<!-- - Source code - [GitHub](https://github.com/haziqjamil/phd-presentation-3) -->
-<!-- - R/iprior package - [CRAN](https://cran.r-project.org/package=iprior), [GitHub](https://github.com/haziqjamil/iprior) -->
-<!-- - R/iprobit package - [GitHub](https://github.com/haziqjamil/iprobit) -->
+- Presentation slides - [PDF](http://phd3.haziqj.ml/phd-presentation-3-handout.pdf)
+- Source code - [GitHub](https://github.com/haziqj/soc-stat-meet-bgtvi)
 
 ## Supplementary material
 
